<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Poker2Activity!</string>
    <string name="app_name">Five-Card-Draw Poker</string>
    <string name="play_game">Play Game</string>
    <string name="deal">Deal</string>
    <string name="bid">Bid</string>
    <string name="fold">Fold</string>
    <string name="draw">Draw</string>
    <string name="send">Send</string>
    <string name="create_game">Create</string>
    <string name="register">Click to Register</string>
    <string name="p0">Player 0</string>
    <string name="p1">Player 1</string>
    <string name="p2">Player 3</string>
    <string name="p3">Player 3</string>

</resources>