<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
     <!-- 
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/app_name" />
	-->
	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
    
        <TextView
            android:id="@+id/money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp" />

	    <TextView
	        android:id="@+id/phase"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="2dp" />

	</LinearLayout>
		
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:orientation="horizontal" >
    
        <TextView
            android:id="@+id/card1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/green_card"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#ff000000"
            android:padding="2dp" />
	    <TextView
	        android:id="@+id/card2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/green_card"
	        android:gravity="center_vertical|center_horizontal"
	        android:textColor="#ff000000"
	        android:padding="2dp" />

	</LinearLayout>
	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:orientation="horizontal" >

        <TextView
            android:id="@+id/card3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/green_card"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#ff000000"
            android:padding="2dp" />

	    <TextView
	        android:id="@+id/card4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/green_card"
	        android:gravity="center_vertical|center_horizontal"
	        android:textColor="#ff000000"
	        android:padding="2dp" />
	    
	    <TextView
	        android:id="@+id/card5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/green_card"
	        android:gravity="center_vertical|center_horizontal"
	        android:textColor="#ff000000"
	        android:padding="2dp" />
	
    </LinearLayout>
	    
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
    
        <Button
            android:id="@+id/deal"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/deal"
            android:padding="2dp" />

	    <Button
	        android:id="@+id/bid"
	        android:layout_weight="1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/bid"
	        android:padding="2dp" />
	    
	    <Button
	        android:id="@+id/fold"
	        android:layout_weight="1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/fold"
	        android:padding="2dp" />
	    
	    <Button
	        android:id="@+id/draw"
	        android:layout_weight="1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/draw"
	        android:padding="2dp" />
	    
	   </LinearLayout>
	    
</LinearLayout>